outputs_20260330-114723-56118cc4/codegen/production/build_logs/compiler_stderr.log
In file included from C:\Users\extpedj\AppData\Local\Temp\tdd_build_boyq3vk8\src\gtm_tom_3_phase_inverter_pwm.c:13:
C:\Users\extpedj\AppData\Local\Temp\tdd_build_boyq3vk8\include/IfxGtm_Pwm.h:162:5: error: unknown type name 'IfxGtm_Pwm_ClusterSFR'; did you mean 'IfxGtm_Cluster'?
  162 |     IfxGtm_Pwm_ClusterSFR    clusterSFR; /* forward declared below */
      |     ^~~~~~~~~~~~~~~~~~~~~
      |     IfxGtm_Cluster
C:\Users\extpedj\AppData\Local\Temp\tdd_build_boyq3vk8\include/IfxGtm_Pwm.h:168:5: error: unknown type name 'IfxGtm_Pwm_GlobalControl'
  168 |     IfxGtm_Pwm_GlobalControl globalControl; /* forward declared below */
      |     ^~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extpedj\AppData\Local\Temp\tdd_build_boyq3vk8\include/IfxGtm_Pwm.h:173:5: error: unknown type name 'IfxGtm_Pwm_ClockSource'; did you mean 'IfxGtm_Dtm_ClockSource'?
  173 |     IfxGtm_Pwm_ClockSource   clockSource; /* forward declared below */
      |     ^~~~~~~~~~~~~~~~~~~~~~
      |     IfxGtm_Dtm_ClockSource
C:\Users\extpedj\AppData\Local\Temp\tdd_build_boyq3vk8\src\gtm_tom_3_phase_inverter_pwm.c: In function 'interruptGtmAtom':
C:\Users\extpedj\AppData\Local\Temp\tdd_build_boyq3vk8\src\gtm_tom_3_phase_inverter_pwm.c:79:5: error: implicit declaration of function 'IfxPort_togglePin' [-Wimplicit-function-declaration]
   79 |     IfxPort_togglePin(LED);
      |     ^~~~~~~~~~~~~~~~~
C:\Users\extpedj\AppData\Local\Temp\tdd_build_boyq3vk8\src\gtm_tom_3_phase_inverter_pwm.c: In function 'configurePwmChannels':
C:\Users\extpedj\AppData\Local\Temp\tdd_build_boyq3vk8\src\gtm_tom_3_phase_inverter_pwm.c:171:37: error: assignment to 'IfxGtm_Pwm_callBack' {aka 'void (*)(void)'} from incompatible pointer type 'void (*)(void *)' [-Wincompatible-pointer-types]
  171 |         interruptConfig.periodEvent = IfxGtm_periodEventFunction;
      |                                     ^
C:\Users\extpedj\AppData\Local\Temp\tdd_build_boyq3vk8\src\gtm_tom_3_phase_inverter_pwm.c:90:6: note: 'IfxGtm_periodEventFunction' declared here
   90 | void IfxGtm_periodEventFunction(void *data)
      |      ^~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extpedj\AppData\Local\Temp\tdd_build_boyq3vk8\include/IfxGtm_Pwm.h:82:16: note: 'IfxGtm_Pwm_callBack' declared here
   82 | typedef void (*IfxGtm_Pwm_callBack)(void);
      |                ^~~~~~~~~~~~~~~~~~~
C:\Users\extpedj\AppData\Local\Temp\tdd_build_boyq3vk8\src\gtm_tom_3_phase_inverter_pwm.c:206:54: error: 'IFXGTM_CLUSTER' undeclared (first use in this function)
  206 |         config.cluster             = (IfxGtm_Cluster)IFXGTM_CLUSTER;
      |                                                      ^~~~~~~~~~~~~~
C:\Users\extpedj\AppData\Local\Temp\tdd_build_boyq3vk8\src\gtm_tom_3_phase_inverter_pwm.c:206:54: note: each undeclared identifier is reported only once for each function it appears in
C:\Users\extpedj\AppData\Local\Temp\tdd_build_boyq3vk8\src\gtm_tom_3_phase_inverter_pwm.c: At top level:
C:\Users\extpedj\AppData\Local\Temp\tdd_build_boyq3vk8\src\gtm_tom_3_phase_inverter_pwm.c:113:13: error: 'configurePwmChannels' defined but not used [-Werror=unused-function]
  113 | static void configurePwmChannels(uint8_t channelCount)
      |             ^~~~~~~~~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors

In file included from C:\Users\extpedj\AppData\Local\Temp\tdd_build_boyq3vk8\mocks\mock_gtm_tom_3_phase_inverter_pwm.c:6:
C:\Users\extpedj\AppData\Local\Temp\tdd_build_boyq3vk8\include/IfxGtm_Pwm.h:162:5: error: unknown type name 'IfxGtm_Pwm_ClusterSFR'; did you mean 'IfxGtm_Cluster'?
  162 |     IfxGtm_Pwm_ClusterSFR    clusterSFR; /* forward declared below */
      |     ^~~~~~~~~~~~~~~~~~~~~
      |     IfxGtm_Cluster
C:\Users\extpedj\AppData\Local\Temp\tdd_build_boyq3vk8\include/IfxGtm_Pwm.h:168:5: error: unknown type name 'IfxGtm_Pwm_GlobalControl'
  168 |     IfxGtm_Pwm_GlobalControl globalControl; /* forward declared below */
      |     ^~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extpedj\AppData\Local\Temp\tdd_build_boyq3vk8\include/IfxGtm_Pwm.h:173:5: error: unknown type name 'IfxGtm_Pwm_ClockSource'; did you mean 'IfxGtm_Dtm_ClockSource'?
  173 |     IfxGtm_Pwm_ClockSource   clockSource; /* forward declared below */
      |     ^~~~~~~~~~~~~~~~~~~~~~
      |     IfxGtm_Dtm_ClockSource
